<resources>
    <string name="app_name">Cluster</string>
    <string name="facebook">Facebook</string>
    <string name="skype">Skype</string>
    <string name="tumblr">Tumblr</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="googleDuo">Google Duo</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="snapchat">Snapchat</string>
    <string name="add">Add</string>
    <string name="addServices">Add services</string>
    <string name="info">Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="default_login_username">username</string>
    <string name="clear">clear</string>
    <string name="default_login_password">password</string>
    <string name="login">login</string>
    <string name="password">password?</string>
    <string name="register">register</string>
    <string name="about_us">about us</string>
    <string name="promoted">Promoted</string>
    <string name="retweeted">retweeted</string>
    <string name="followers">Followers</string>
    <string name="uploads">Uploads</string>
    <string name="serviceLoginUnsuccessful">login unsuccessful</string>
    <string name="save">Save</string>
    <string name="forwardTo">Forward to</string>
    <string name="tweetPhoto">Tweet Photo</string>
    <string name="filter">Filter</string>
    <string name="search_hint">Search...</string>
    <string name="noConnection">no connection</string>
    <string name="refresh">Refresh</string>
    <string name="twitter_action_search">Search</string>
    <string name="twitter_action_mute">Mute</string>
    <string name="twitter_action_block">Block</string>
    <string name="twitter_action_report">Report</string>
    <string name="twitter_consumer_key">pq6Gp4dWWh1KSbnbVvcMT6vrW</string>
    <string name="twitter_consumer_secret">SBvlz259LdPLF5FTOkeA6ReXVu1NPdnBNExAyTZVjYBIQxZ89e</string>
    <string name="logInWithTwitter">Add Twitter to Cluster: </string>
    <string name="twitterLoginError">Login failed</string>
    <string name="twitterUploadError">could not post Tweet</string>
    <string name="twitterUploadAddAComment">Add a comment</string>
    <string name="twitterUploadSuccess">Tweet posted</string>
    <string name="twitterTweet">Tweet</string>
    <string name="Tweets">Tweets</string>
    <string name="Media">Media</string>
    <string name="Likes">Likes</string>
    <string name="navActivity">Activity</string>
    <string name="navClusterCode">Cluster Code</string>
    <string name="navContacts">Contacts</string>
    <string name="navAddServices">Add services</string>
    <string name="navNotification">Notifications</string>
    <string name="navSettings">Settings</string>
    <string name="navPrivacy">Privacy</string>
    <string name="navStickerStore">Sticker store</string>
    <string name="navSendFeedback">Send feedback</string>
    <string name="navLogout">Logout</string>
    <string name="about_me">About me:</string>
    <string name="about_me_description">Tell us something about you</string>
    <string name="details">Details:</string>
    <string name="hometown">Hometown</string>
    <string name="education">Education</string>
    <string name="profession">Profession</string>
    <string name="relationshipStatus">Relationship</string>
    <string name="noResponse">No response</string>
    <string name="jobDescription">What is it exactly that you do?</string>
    <string name="registerViewPager0">Create a cluster account</string>
    <string name="registerViewPager1">Basic information</string>
    <string name="registerViewPager2">Cluster name</string>
    <string name="registerViewPager3">Create a password</string>
    <string name="registerViewPager4">Add a profile picture</string>
    <string name="registerViewPager5">Add your Phone Number</string>
    <string name="registerViewPager6">Add some details</string>
    <string name="registerViewPager7">Welcome to Cluster</string>
    <string name="professionNoResponse">No response</string>
    <string name="professionUnemployed">Unemployed</string>
    <string name="professionApprenticeship">In an apprenticeship</string>
    <string name="professionEmployee">Employee</string>
    <string name="professionCivilServant">Civil servant</string>
    <string name="professionHomemaker">Homemaker</string>
    <string name="professionRetired">Retired</string>
    <string name="professionSelfEmployed">Self employed</string>
    <string name="professionHighSchoolStudent">High School Student</string>
    <string name="professionCollegeStudent">College Student</string>
    <string name="mainCloseDialogTitle">Close Cluster?😢</string>
    <string name="mainCloseDialogMessage">Do you really want to close Cluster?</string>
    <string name="noInternetConnection">No internet connection</string>
    <string name="fabPost">Post</string>
    <string name="fabContacts">Contacts</string>
    <string name="fabScanner">Scanner</string>
    <string name="fabStory">Story</string>
    <string name="fabActivity">Activity</string>
    <string name="fabFilter">Filter</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="genderOther">Other</string>
    <string name="genderAlien">Not from this world</string>
    <string name="feed">Feed</string>
    <string name="chats">Chats</string>
    <string name="trending">Trendy ✨</string>
    <string name="profile">Profile</string>
    <string name="content_description_profile_picture">There has been an error with the profile picture</string>
    <string name="get_started">get started</string>
    <string name="no_feed_message">Once you are logged in with your social media accounts, you can see the feed here</string>
    <string name="no_chats_message">Once you are logged in with your social media accounts, you will be able to see your chats here</string>
    <string name="no_feed_trending_message">Once you are logged in you can see the trending Posts here</string>
    <string name="services">Services</string>
    <string name="options">Options</string>
    <string name="imgDescription">img</string>
    <string name="needOneSelectedService">You need at least one selected service</string>
    <string name="moreInfo">More Information</string>
    <string name="termsAndConditions">Terms and conditions</string>
    <string name="login_login">login</string>
    <string name="username">Username</string>
    <string name="login_password">Password</string>
    <string name="go">Go</string>
    <string name="ForgotyourPassword">Forgot your Password?</string>
    <string name="loginAccessDenied">You have to login first</string>
    <string name="logoutTitle">Logout??</string>
    <string name="logoutMessage">Do you really want to log out?</string>
    <string name="noAddedServicesHeader">You have not added any services yet!</string>
    <string name="noSelectedServicesHeader">You have not selected any services!</string>
    <string name="noAddedServiceButton">Add Services</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="clusterName">Cluster Name</string>
    <string name="lastNameError">Enter last name</string>
    <string name="firstNameError">Enter first name</string>
    <string name="basicInformationHeader">Enter your birthday and gender</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="enterYourGender">Enter your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="usernameHeader">You will use this clustername to sign in to your Cluster Account</string>
    <string name="clustername">Clustername</string>
    <string name="CnInputRestriction">Only use A-Z, a-z, 0-9 and .</string>
    <string name="clusterNameError1">Please Enter a Clustername</string>
    <string name="clusterNameError2">You can only use A-Z, a-z, and 0-9</string>
    <string name="clusterNameError3">This username already exists</string>
    <string name="createPassword">Create Password</string>
    <string name="confirmPassword">ConfirmPassword</string>
    <string name="PwInputRestrictions">At least 8 characters</string>
    <string name="profilePhoto">Profile photo</string>
    <string name="gallery">Gallery</string>
    <string name="choosePic">Choose Pic</string>
    <string name="delete">Delete</string>
    <string name="picHeader">Notice: Your Profile picture can be seen by everyone</string>
    <string name="detailHeader">These details can be seen by anyone who clicks on your Profile</string>
    <string name="dateError">Please enter a valid date</string>
    <string name="genderError">Choose a gender</string>
    <string name="passwordError1">Enter a password</string>
    <string name="passwordError2">Your password has to be at least 8 character long</string>
    <string name="passwordError3">Your password does not match</string>
    <string name="numberHeader">Adding this number will make you able to see your sms messages in the chat</string>
    <string name="numberCountry">Country</string>
    <string name="phoneNumber">Phone number</string>
    <string name="numberVisibleHeader">If this is checked everyone can see your phone number in your account!</string>
    <string name="numberVisibleToOthers">visible to Others</string>
    <string name="numberSkip">Skip</string>
    <string name="numberDialogTitle">Are you sure??</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="numberError">Please enter a real PhoneNumber!</string>
    <string name="welcomeClustername">Welcome </string>
    <string name="welcomeDescription">This is your Clustercode if somebody scans this he will be directly linked to your Profile</string>
    <string name="welcomeServiceAddDescription">Now you can add your social media Accounts to combine them with Cluster</string>
    <string name="welcomeServiceAddHeader">Add Services</string>
    <string name="serviceAddLabel">Add Services</string>
    <string name="addServicePassword">Password</string>
    <string name="addServiceLogin">Log in</string>
    <string name="addServiceEmail">email</string>
    <string name="addServiceDataError">Your password/username was incorrect!</string>
    <string name="addServiceDeleteTitle1">Do you really want to delete your</string>
    <string name="addServiceDeleteTitle2">Account</string>
    <string name="addServiceDeleteMessage">After deleting your account you will no longer see any posts or chats from this account</string>
    <string name="loginErrorMessage1">You must enter a password and username</string>
    <string name="loginErrorMessage2">Your clustername does not exist</string>
    <string name="loginErrorMessage3">Your password was wrong</string>
    <string name="loginErrorMessage4">There has been an error</string>
    <string name="registerCloseDialogTitle">Close Register??😢</string>
    <string name="registerCloseDialogMessage">Do you really want to close Register?  Your data will be lost!</string>
    <string name="noHistory">You have no search history</string>
    <string name="serverError">Server Error</string>
    <string name="clusterDescription">Cluster is an app that combines all your social media accounts to deliver the best user experience.  &#xA;Please help us to make this app even better by submitting feedback.</string>
    <string name="my_profile">My profile</string>
    <string name="search">Search</string>
</resources>