<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        app:showAsAction= "ifRoom"
        android:title="@string/filter"
        android:icon="@drawable/action_ic_filter"/>
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        app:showAsAction= "ifRoom"
        android:title="@string/search"
        android:icon="@drawable/action_ic_search"/>

    <item
        android:id="@+id/action_my_profile"
        android:title="@string/my_profile"
        app:showAsAction = "never"
        />
</menu>
