<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.media.cluster.cluster.Login.RegisterNameFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="32dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <android.support.design.widget.TextInputLayout
            android:textColorHint="#c5c5c5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:hint="@string/firstName"
                android:textColor="@color/colorAccent"
                android:id="@+id/register_first_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@drawable/login_selector_bg_edit"
                android:textCursorDrawable="@drawable/login_bg_input_cursor"
                android:paddingBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textColorHighlight="@color/colorAccent"
                android:imeOptions="actionNext"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/firstNameError"
            android:textColor="#DD0000"
            android:visibility="invisible"
            android:id="@+id/first_name_error"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="32dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <android.support.design.widget.TextInputLayout
            android:textColorHint="#c5c5c5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:hint="@string/lastName"
                android:textColor="@color/colorAccent"
                android:id="@+id/register_last_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@drawable/login_selector_bg_edit"
                android:textCursorDrawable="@drawable/login_bg_input_cursor"
                android:paddingBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textColorHighlight="@color/colorAccent"
                android:imeOptions="actionGo"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/lastNameError"
            android:textColor="#DD0000"
            android:visibility="invisible"
            android:id="@+id/last_name_error"/>
    </LinearLayout>

</LinearLayout>
